# light-map

./: .coverage  .gemini-commit-message.txt  .gitignore  AGENTS.md  ANALYSIS.md  GEMINI.md  README.md  build-opencv.sh  calibrate.py  camera.py  debug_svg.py  generate_calibration_target.py  hand_tracker.py  projector_calibration.npz  projector_calibration.py  pyproject.toml  pytest.ini  requirements.txt  session.json  tdd_cam_calib.npz  tdd_cam_ext.npz  test_cam_calib.npz  test_cam_ext.npz  test_fov_cam_ext.npz  tokens.json  visualize_distortion.py
.beads/: .gitignore  config.yaml  issues.jsonl  metadata.json
docs/: calibration.md  configuration.md  exclusive_vision.md  hand_tracking.md  map_system.md  menu_system.md  multiprocessing.md  performance_instrumentation.md  remote_driver.md  remote_driver_improvements.md  token_tracking.md
features/: aruco_token_tracking.md  atomic_state_and_temporal_management.md  design_refinement_aruco_stability.md  hand_tracking_masking.md  hermetic_e2e_integration_testing.md  hexagonal_grid_support.md  hierarchical_menus.md  improved_calibration_and_marker_defaults.md  integer_math_layer_composition.md  layered_renderer_design.md  map_grid_scaling.md  map_loading_sessions.md  map_pan_zoom.md  multiprocessing_refactor.md  performance_optimization.md  performance_optimization_review.md  player_tactical_dashboard.md  projection_interference_mitigation.md  projector_distortion_correction.md  refactor_interactive_app.md  refactor_interactive_app_orchestration.md  remote_api.md  robust_logging.md  solvepnp_feedback_design.md  structured_light_token_detection.md  svg_map_support.md  tactical_cover_and_reflex.md  tactical_testing_framework.md  token_tracking_brainstorm.md  typed_config_synchronization.md  watertight_pixel_visibility.md  web_control_interface.md
frontend/: package-lock.json  package.json  playwright.config.ts  vitest.config.ts
models/: book_token_cap.3mf  printed_token_holder.3mf  printed_token_holder.FCStd  printed_token_holder_cap.3mf
samples/: token_capture_20260211_235147_L255.json
scripts/: bless_tactical_tests.py  calculate_poses.py  calibrate.py  detect_aruco.py  generate_aruco.py  generate_calibration_target.py  generate_ts_schema.py  install_app.py  projector_calibration.py  run_real_frontend_e2e.py  run_tactical_tests.py  setup_env.sh  verify_map_grid_layer.py  verify_performance.py  verify_remote_api.py
src/: light_map_entry.py
tests/: README.md  debug_token_tracker.py  debug_token_tracker_adaptive.py  reproduce_issue.py  test_action_dispatcher_clean.py  test_aruco_detector.py  test_aruco_duplicate_resolution.py  test_aruco_fov_masking.py  test_aruco_grid_snapping.py  test_aruco_mask_layer.py  test_aruco_override_management.py  test_aruco_resizing.py  test_base_scale_logic.py  test_calibration.py  test_calibration_extrinsics.py  test_calibration_logic.py  test_calibration_logic_ppi.py  test_calibration_scene_layers.py  test_camera.py  test_camera_operator.py  test_camera_pipeline.py  test_common_types_ipc.py  test_composite_layer.py  test_config_migration.py  test_config_sync.py  test_context_tiers.py  test_cover_logic.py  test_ctags_navigation.py  (+160 more)
(+314 files in other folders)
