[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "light-map"
version = "0.5.1"
description = "Interactive AR tabletop platform for physical gaming"
authors = [
    {name = "Rodrigo Chandia", email = "rodrigo.chandia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "numpy",
    "mediapipe",
    "svgelements",
    "Pillow",
    "fastapi",
    "uvicorn",
    "pydantic",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "ruff",
    "mdformat",
    "pyinstaller",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
light-map = "light_map.__main__:main"
light-map-calibrate = "scripts.calibrate:main"
light-map-projector-calibrate = "scripts.projector_calibration:main"

[tool.ruff]
# Enable the pycodestyle (E) and Pyflakes (F) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (W) or
# McCabe complexity (C901) by default.
line-length = 100
indent-width = 4

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".visualstudio",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = [
    "E501", # Line length
    "B905", # zip() without strict=
    "B027", # Empty method in abstract base class
    "B019", # lru_cache on methods
    "B011", # assert False
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 15.
max-complexity = 15

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2

